crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_activation_script_cmd_append.snap
---
source: crates/rattler_shell/src/activation.rs
expression: "script.replace(\"\\r\\n\", \"\\n\")"
---
chcp 65001 > nul
@SET "PATH=%PATH%:__PREFIX__/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin"
@SET "CONDA_PREFIX=__PREFIX__"
