crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_activation_script_powershell_prepend.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script
---
$OutputEncoding = [System.Text.Encoding]::UTF8
[Console]::OutputEncoding = [System.Text.Encoding]::UTF8
chcp 65001
${Env:PATH} = "__PREFIX__/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:$Env:PATH"
${Env:CONDA_PREFIX} = "__PREFIX__"
