crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_deactivation_bash.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script_contents
---
echo 'Warning: PIXI_SHLVL not set. This may indicate a broken workflow.'
echo 'Proceeding to unset pixi variables without restoring previous values.'
unset TEST_VAR1
unset TEST_VAR2
unset CONDA_PREFIX
unset PIXI_SHLVL
