crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_deactivation_dash.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script_contents
---
echo 'Warning: CONDA_SHLVL not set. This may indicate a broken workflow.'
echo 'Proceeding to unset conda variables without restoring previous values.'
unset TEST_VAR1
unset TEST_VAR2
unset CONDA_PREFIX
unset CONDA_SHLVL
