crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_deactivation_fish.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script_contents
---
if set -q PIXI_ENV_SHLVL_0_TEST_VAR1
                set -gx TEST_VAR1 $PIXI_ENV_SHLVL_0_TEST_VAR1
                set -e PIXI_ENV_SHLVL_0_TEST_VAR1
            else
                set -e TEST_VAR1
            end
if set -q PIXI_ENV_SHLVL_0_TEST_VAR2
                set -gx TEST_VAR2 $PIXI_ENV_SHLVL_0_TEST_VAR2
                set -e PIXI_ENV_SHLVL_0_TEST_VAR2
            else
                set -e TEST_VAR2
            end
if set -q PIXI_ENV_SHLVL_0_CONDA_PREFIX
                set -gx CONDA_PREFIX $PIXI_ENV_SHLVL_0_CONDA_PREFIX
                set -e PIXI_ENV_SHLVL_0_CONDA_PREFIX
            else
                set -e CONDA_PREFIX
            end
