crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_deactivation_nushell.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script_contents
---
if ($env | get PIXI_ENV_SHLVL_0_TEST_VAR1?) {
                $env.TEST_VAR1 = $env.PIXI_ENV_SHLVL_0_TEST_VAR1
                $env = $env | reject PIXI_ENV_SHLVL_0_TEST_VAR1
            } else {
                $env = $env | reject TEST_VAR1
            }
if ($env | get PIXI_ENV_SHLVL_0_TEST_VAR2?) {
                $env.TEST_VAR2 = $env.PIXI_ENV_SHLVL_0_TEST_VAR2
                $env = $env | reject PIXI_ENV_SHLVL_0_TEST_VAR2
            } else {
                $env = $env | reject TEST_VAR2
            }
if ($env | get PIXI_ENV_SHLVL_0_CONDA_PREFIX?) {
                $env.CONDA_PREFIX = $env.PIXI_ENV_SHLVL_0_CONDA_PREFIX
                $env = $env | reject PIXI_ENV_SHLVL_0_CONDA_PREFIX
            } else {
                $env = $env | reject CONDA_PREFIX
            }
