crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_deactivation_powershell.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script_contents
---
$OutputEncoding = [System.Console]::OutputEncoding = [System.Console]::InputEncoding = [System.Text.Encoding]::UTF8
echo 'Warning: PIXI_SHLVL not set. This may indicate a broken workflow.'
echo 'Proceeding to unset pixi variables without restoring previous values.'
${Env:TEST_VAR1}=""
${Env:TEST_VAR2}=""
${Env:CONDA_PREFIX}=""
${Env:PIXI_SHLVL}=""
